# merged.dev

./: .auto-claude-security.json  .env.example  README.md  compose.yaml  flake.nix
.github/workflows/: claude.yml
backend/: Cargo.toml  schema.sql
backend/src/: db.rs  main.rs
backend/src/models/: mod.rs  user.rs  user_detail.rs
backend/tests/: user_detail_tests.rs  user_tests.rs
backend/tests/fixtures/: schema.sql
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: mock-data.ts
